# CourseControl

./: .Dockerignore  Dockerfile  README.md  database_structure.sql  docker-compose.yml
.github/workflows/: dev.yml
Android/: settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/res/drawable/: border_courses.xml  border_home.xml  category_background.xml  course_background.xml  rounded_border.xml  rounded_border_button.xml  rounded_border_course_view.xml  rounded_border_courses_page.xml  subcategory_background.xml
Android/app/src/main/res/layout/: activity_admin_create_new_category.xml  activity_admin_create_new_course.xml  activity_admin_create_new_subcategory.xml  activity_beginning.xml  activity_completed_courses.xml  activity_edit_course_data.xml  activity_forgotten_password.xml  activity_generate_report.xml  activity_generate_report_manager.xml  courses_page.xml  (+23 more)
Android/core/: build.gradle.kts
Android/core/src/main/: AndroidManifest.xml
Android/gradle/wrapper/: gradle-wrapper.properties
Android/report/: build.gradle.kts
Android/report/src/main/: AndroidManifest.xml
backend/: Cargo.toml  Dockerfile  docker-compose.yml
backend/src/: main.rs
backend/src/courses/: mod.rs
backend/src/courses/categories/: mod.rs
backend/src/courses/courses/: mod.rs
backend/src/courses/subcategories/: mod.rs
backend/src/database/: mod.rs
backend/src/regex_checks/: mod.rs
backend/src/session_token/: mod.rs
backend/src/test/: mod.rs
backend/src/users/: mod.rs
backend/src/users/admin/: mod.rs
(+118 files in other folders)
