[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="1.0.190", features=["derive"]}
tokio="1.33.0"
chrono={version="0.4.31", features=["serde"]}
rocket={ git = "https://github.com/SergioBenitez/Rocket", rev = "07fe797", features = ["json"]}
sqlx={version = "0.7.2", features = ["postgres", "runtime-tokio-rustls", "chrono"]}
dotenv="0.15.0"
fancy-regex="0.12.0"
rand="0.8.5"
itertools="0.12.0"
